# tg-subreddit-mirror-rs

./: .gitignore  Cargo.toml
migrations/2023-05-17-170141_channel/: up.sql
migrations/2023-05-17-170143_subreddit/: down.sql  up.sql
migrations/2023-05-17-170147_channel_subreddit/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  redditBot.rs  reddit_bot.rs  settings.rs  teloxide.rs
src/db/: models.rs  schema.rs
src/teloxide/: channel.rs  subreddit.rs
