[package]
name = "tg-subreddit-reposter-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
config = { version = "0.13.3", features = ["toml"] }
serde_derive = "1.0.163"
serde = "1.0.163"
roux = "2.2.7"

[dev-dependencies]
serde_derive = "1.0.163"
