[package]
name = "tg-subreddit-reposter-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
config = { version = "0.13.3", features = ["toml"], default-features = false }
serde_derive = "1.0.163"
serde = "1.0.163"
roux = "2.2.7"
roux-stream = "0.1.0"
diesel = { version = "2.0.4", default-features = false, features = ["sqlite", "chrono"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
once_cell = "1.17.1"
chrono = "0.4.24"

[dev-dependencies]
serde_derive = "1.0.163"
